fixed an issue on photo show where footer doesn't sit at bottom of screen on mobile

--- a/app/assets/stylesheets/components/_photo_index.scss
+++ b/app/assets/stylesheets/components/_photo_index.scss
@@ -8,6 +8,7 @@
   margin: 5px 50px 45px;
   background-color: #fff;
   box-shadow: 1px 1px 8px #d6d6d6; padding: 10px 0;
+  flex: 1 0 auto;
 }
 
 .photo-index-item-container-splash:hover {
