--- a/app/assets/stylesheets/components/_photo_show.scss
+++ b/app/assets/stylesheets/components/_photo_show.scss
@@ -1,5 +1,6 @@
 .photo-show-background {
   background-color: #f3f5f6;
+  flex: 1 0 auto;
 }
 
 .photo-show {
